article_04/envoy_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-envoy
  labels:
    app: myapp-envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: myapp-envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-envoy
  labels:
    app: myapp-envoy
spec:
  selector:
    matchLabels:
      app: myapp-envoy
  template:
    metadata:
      labels:
        app: myapp-envoy
    spec:
      containers:
      - name: myapp-envoy
        image: vitorcmonteiro/myapp-envoy:1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: envoy-admin
          containerPort: 9901
